# AIM-chatbot

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  test.py
.github/workflows/: python-package-conda.yml  test-build.yml
auto_marker/: README.md
src/: RAG.py  app.py  content_construct.py  email_notifier.py  latex_defs.py  marker_app.py  prompts.py  sample_config.toml  util.py
src/auto_grader/: basics.py  prompts.py
src/auto_grader/sample-homework/: template.md  template.tex
src/auto_marker/: README.md  __init__.py  basics.py  llm_interact.py  logging.py  marker.py  openreview_interact.py  prompts.py  sample-problem-material.md  sample-problem-material.tex  sample_marker_config.toml
src/auto_marker/sample-homework/: sample-markdown-homework.md
src/auto_marker/text_processor/: __init__.py  markdown_processor.py  tex_processor.py  utils.py
tests/: test_content_construct.py  test_llm_interact.py  test_main.tex  test_utils.py
tests/auto_grader/: test_basics.py
tests/auto_marker/: test_basics.py
tests/auto_marker/text_processor/: markdown_parser_output.json  test_markdown_parser.py  test_markdown_processor.py  test_tex_parser.py  test_tex_processor.py  test_utils.py  tex_parser_output.json
